Lab 6 - Using Openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  selector:
    name: hello-openshift
  ports:
  - nodePort: 0
    port: 8080               
    protocol: TCP
    targetPort: 8080
