Lab 6 - Using Openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: hello-openshift
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-openshift
    weight: 100
  wildcardPolicy: None
